# hackz-Ichthyo-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  db.py  docker-compose.yml  main.py  pyproject.toml  seed.py  start.sh
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 3cedadb2b4df_add_icon_url_column_to_customer_table.py  81d14dab3cc5_create_all_tables.py  b158030944b3_initial_migration.py  b88f2f1c0a78_create_tables_on_rds.py  c5b15a92ef72_alter_table.py
models/: __init__.py  chat.py  customer.py  magic.py  player.py
routers/: customer.py  magic.py  player.py
schemas/: chat.py  customer.py  magic.py  message.py  player.py
