[project]
name = "hackz-ichthyo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.5",
    "faker>=37.8.0",
    "fastapi>=0.116.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy-migrate>=0.13.0",
    "uvicorn>=0.35.0",
]
